--- a/index.html
+++ b/index.html
@@ -50,7 +50,21 @@
                             <input type="text" placeholder="1/10/2010" id="datetime" />
                         </li>
                         <li class="list-group-item bg-dark">
-                            <button id="filter-btn" type="button" class="btn  btn-dark btn-default">Filter Table</button>
+                            <!--<button id="filter-btn" type="button" class="btn  btn-dark btn-default">Filter Table</button>!-->
+                            <label for="date">Enter City</label>
+                            <input type="text" class="form-control" placeholder="fresno" id="city" />
+                        </li>
+                        <li class="list-group bg-dark">
+                            <label for="date">Enter State</label>
+                            <input type="text" class="form-control" placeholder="ca" id="state" />
+                        </li>
+                        <li class="list-group bg-dark">
+                            <label for="date">Enter Country</label>
+                            <input type="text" class="form-control" placeholder="us" id="country" />
+                        </li>
+                        <li class="list-group bg-dark">
+                            <label for="date">Enter Shape</label>
+                            <input type="text" class="form-control" placeholder="light" id="shape" />
                         </li>
                     </ul>
                   </div>
